# pySC

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  pySC_tests.yml  pyaml_tests.yml
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  installation.rst  readthedocs.rst  usage.rst
examples/: 01_hmba_response_matrices.py  02_correct_injection_1turn.py  03_orbit_bba_first_10_bpms.py  04_orbit_bba_multiple_threads_first_10_bpms.py  05_save_and_reload_sc.py  README.md  hmba_config.yaml
examples/operation/: correct_1st_turn.py  correct_orbit.py  interface.py  measure_BBA.py  measure_ORM.py
pySC/: __init__.py
pySC/apps/: __init__.py  bba.py  codes.py  dispersion.py  dynamic_aperture.py  interface.py  loco.py  measurements.py  multipoles.py  response.py  response_matrix.py  tools.py
pySC/configuration/: bpm_system_conf.py  bpms.py  general.py  generation.py  injection_conf.py  load_config.py  magnets.py  magnets_conf.py  rf.py  rf_conf.py  supports.py  supports_conf.py  tuning_conf.py
pySC/control_system/: client.py  magnet_server.py  orbit_server.py  rf_server.py  send_receive.py  server.py
pySC/core/: beam.py  bpm_system.py  control.py  injection.py  lattice.py  magnet.py  magnetcontrol.py  magnetsettings.py  new_api.py  new_simulated_commissioning.py  numpy_type.py  rfsettings.py  rng.py  simulated_commissioning.py  support.py  supports.py  tuning_core.py  types.py  xsuite_lattice.py
pySC/correction/: bba.py  loco.py  tbt.py
pySC/lattice_properties/: dispersion.py  response_model.py
pySC/tuning/: __init__.py  averaging.py  bba.py  c_minus.py  chromaticity.py  measurements.py  model_response.py  (+10 more)
tests/: conftest.py
(+67 files in other folders)
